První živá verze, hurá

--- a/www/jidelni-listek.html
+++ b/www/jidelni-listek.html
@@ -83,181 +83,58 @@
 <div class="wrapper">
     <div class="content">
         <div class="section">
-            <h1 id="Jídelní-lístek" data-id="Jídelní-lístek">
-                <span>Jídelní lístek</span>
-            </h1>
-            <p>
-                <em><span>Informace o obsažených alergenech Vám na požádání rádi poskytneme.</span></em>
-            </p>
-            <h2 id="Panini-a-toasty" data-id="Panini-a-toasty">
-                <span>Panini a toasty</span>
-            </h2>
-            <p>
-                <em><span>Křupavé bagetky Panini i toasty zapékáme v bezkontaktním grilu. Toasty jsou nižší a menší než panini, takže se budou lépe jíst menším dětem. U toastů si můžete vybrat pečivo z bílé, nebo celozrnné mouky.</span></em>
-            </p>
-            <p>
-                <strong><span>Toast/Panini se šunkou, sýrem, rajčátkem a ledovým salátem</span></strong><span> … 45/65 Kč</span>
-            </p>
-            <p>
-                <strong><span>Toast/Panini se sýrem camembert, vlašskými ořechy a jablkem</span></strong><span> … 45/65 Kč</span>
-            </p>
-            <p>
-                <strong><span>Veganský Toast/Panini s pestem, bylinkovým tofu, rajčátkem, ledovým salátem a sezamem</span></strong><span> … 45/65 Kč</span>
-            </p>
-            <p>
-                <strong><span>Toast s marmeládou a arašídovým máslem</span></strong><span> … 45 Kč</span>
-            </p>
-            <p>
-                <strong><span>Bezlepková bagetka</span></strong><span> s libovolnou náplní z výše uvedených …  79 Kč</span>
-            </p>
-            <h2 id="Pokrmy-z-horkovzdušné-fritézy" data-id="Pokrmy-z-horkovzdušné-fritézy">
-                <span>Pokrmy z horkovzdušné fritézy</span>
-            </h2>
-            <p>
-                <em><span>Díky přípravě bez smažení v oleji jsou jídla zdravá ía vhodná pro děti.</span></em>
-            </p>
-            <p>
-                <strong><span>Hranolky s kečupem nebo bylinkovým dipem</span></strong><span> … 39 Kč</span>
-            </p>
-            <p>
-                <strong><span>Krokety s kečupem nebo bylinkovým dipem</span></strong><span> … 49 Kč</span>
-            </p>
-            <p>
-                <strong><span>Opečené kostičky tofu s bylinkami navíc</span></strong><span> … 20 Kč</span>
-            </p>
-            <p>
-                <strong><span>Opečené kostičky marinovaného tempehu navíc</span></strong><span> … 30 Kč</span>
-            </p>
-            <h2 id="Něco-na-zub-pro-děti" data-id="Něco-na-zub-pro-děti">
-                <span>Něco na zub pro děti</span>
-            </h2>
-            <p>
-                <strong><span>Banán se šlehačkou/zmrzlinou</span></strong><span> sypaný kakaem … 39 Kč</span>
-            </p>
-            <p>
-                <strong><span>Zdobený chlebíček</span></strong><span> (rýžový/kukuřičný chlebíček s tvarohem a ovocem) … 39 Kč</span>
-            </p>
-            <p>
-                <strong><span>Krupicová kaše</span></strong><span> s bio máslem, kakaem a ovocem … 39 Kč</span>
-            </p>
-            <p>
-                <strong><span>Ovocná miska se šlehačkou</span></strong><span> … 39,-</span>
-            </p>
-            <p>
-                <strong><span>Mistička kojenecké kaše</span></strong><span> dle aktuální nabídky … 29 Kč</span>
-            </p>
-            <h1 id="Nápojový-lístek" data-id="Nápojový-lístek">
-                <span>Nápojový lístek</span>
-            </h1>
-            <p>
-                <strong><span>Kohoutková voda s citronem</span></strong><span> … 15 Kč</span>
-            </p>
-            <h2 id="Káva" data-id="Káva">
-                <span>Káva</span>
-            </h2>
-            <p>
-                <em><span>K espressu vám přidáme ohřáté bio kravské nebo sojové mléko, a sklenici vody. U Caffè Latté a Kapucína si řekněte, zda chcete přípravu z bio kravského nebo ze sojového mléka.</span></em>
-            </p>
-            <p>
-                <strong><span>Espresso/Lungo</span></strong><span>(větší espresso) … 35,-</span>
-            </p>
-            <p>
-                <strong><span>Doppio Espresso</span></strong><span> (z dvojnásobného množství kávy pro náročný den) … 55 Kč</span>
-            </p>
-            <p>
-                <strong><span>Capuccino</span></strong><span> neboli Kapucín … 49 Kč</span>
-            </p>
-            <p>
-                <strong><span>Caffè Latté</span></strong><span> … 55 Kč</span>
-            </p>
-            <p>
-                <strong><span>Ledová káva</span></strong><span> se zmrzlinou a šlehačkou … 59 Kč</span>
-            </p>
-            <h2 id="Čaj" data-id="Čaj">
-                <span>Čaj</span>
-            </h2>
-            <p>
-                <strong><span>Úžasné sáčkové čaje Coccole</span></strong><span> dle aktuální nabídky … 45,- Kč</span>
-            </p>
-            <p>
-                <strong><span>Černý/zelený sypaný čaj</span></strong><span> v konvičce dle aktuální nabídky 39,- Kč</span>
-            </p>
-            <p>
-                <strong><span>Chai Latté</span></strong><span> je řada čajů v Indickém stylu, výrazně kořeněné čaje se dolévají mlékem (bio kravské/sojové). Na výběr jsou Klasik/Vanilka/Koření/Anýz/Bez cukru … 49 Kč</span>
-            </p>
-            <p>
-                <strong><span>Meduňkový z naší zahrádky</span></strong><span> pro příjemné sny Vás nebo Vaší drobotiny … 39 Kč</span>
-            </p>
-            <p>
-                <strong><span>Horký zázvor s citronem a medem</span></strong><span> … 49 Kč</span>
-            </p>
-            <h2 id="Horká-čokoláda-kakao-a-Caro" data-id="Horká-čokoláda-kakao-a-Caro">
-                <span>Horká čokoláda, kakao a Caro</span>
-            </h2>
-            <p>
-                <strong><span>Horká čokoláda na tyčce</span></strong><span> Větší děti si za odměnu rády samy rozpustí čokoládu v horkém bio mléce. Hořká/Mléčná … 65 Kč</span>
-            </p>
-            <p>
-                <strong><span>Horká čokoláda</span></strong><span> … 45 Kč</span>
-            </p>
-            <p>
-                <strong><span>Kakao</span></strong><span> … 29 Kč</span>
-            </p>
-            <p>
-                <strong><span>Caro</span></strong><span> … 25 Kč</span>
-            </p>
-            <h2 id="Domácí-limonády" data-id="Domácí-limonády">
-                <span>Domácí limonády</span>
-            </h2>
-            <p>
-                <span>Znamenité domácí limonády plné zralého ovoce české značky My Homemade Lemonade vám připravíme studené i horké.</span>
-            </p>
-            <p>
-                <strong><span>Malina s bazalkou/Citron/Pomeranč s hřebíčkem/Višeň</span></strong><span> … 0.2l/19,-  0.4l/35,-</span>
-            </p>
-            <h1 id="Freshe-smoothie-a-koktejly" data-id="Freshe-smoothie-a-koktejly">
-                <span>Freshe, smoothie a koktejly</span>
-            </h1>
-            <p>
-                <em><span>Mixujeme zcela čerstvé ovocné a zeleninové smoothie a mléčné koktejly.</span></em>
-            </p>
-            <p>
-                <strong><span>Pomerančový fresh</span></strong><span> … 49 Kč</span><br>
-                <span>Svěží nápoj z čerstvého pomeranče s trochou banánu.</span>
-            </p>
-            <p>
-                <strong><span>Grapefruitový fresh</span></strong><span> … 49 Kč</span><br>
-                <span>Zdravý nápoj z čerstvého grapefruitu s trochou banánu.</span>
-            </p>
-            <p>
-                <strong><span>Ananasový fresh</span></strong><span> … 59 Kč</span><br>
-                <span>Svěží nápoj z čerstvého ananasu s trochou banánu - bohužel se jedná o sezónní ovoce, které není vždy k dispozici.</span>
-            </p>
-            <p>
-                <strong><span>Okurkové smoothie</span></strong><span> … 49 Kč</span><br>
-                <span>Osvěžující smoothie z okurky, jablečného džusu a citrónové šťávy oslazené lžičkou medu.</span>
-            </p>
-            <p>
-                <strong><span>Mrkvovo-banánové smoothie</span></strong><span> … 49 Kč</span><br>
-                <span>Hutnější, ale svěží smoothie z mrkve a banánu, chia semínek, jablečného džusu a citrónové šťávy.</span>
-            </p>
-            <p>
-                <strong><span>Kakaovo-arašídové smoothie</span></strong><span> … 49 Kč</span><br>
-                <span>Hutné čokoládové smoothie z banánu, arašídového másla a kakaa.</span>
-            </p>
-            <p>
-                <strong><span>Banánový koktejl</span></strong><span> … 49 Kč</span><br>
-                <span>Koktejl z banánu a bio mléka.</span>
-            </p>
-            <h2 id="Alkoholické-nápoje" data-id="Alkoholické-nápoje">
-                <span>Alkoholické nápoje</span>
-            </h2>
-            <p>
-                <strong><span>Víno / Vinný střik</span></strong><span> … 0,1 l / 20 Kč</span>
-            </p>
-            <p>
-                <strong><span>Destiláty</span></strong><span> podle aktuální nabídky</span>
-            </p>
+            <h1 id="jídelní-lístek">Jídelní lístek</h1>
+            <p><em>Informace o obsažených alergenech Vám na požádání rádi poskytneme.</em></p>
+            <h2 id="panini-a-toasty">Panini a toasty</h2>
+            <p><em>Křupavé bagetky Panini i toasty zapékáme v bezkontaktním grilu. Toasty jsou nižší a menší než panini, takže se budou lépe jíst menším dětem. U toastů si můžete vybrat pečivo z bílé, nebo celozrnné mouky.</em></p>
+            <p><strong>Toast/Panini s bazalkovým pesterm, sýrem camembert, vlašskými ořechy</strong> … 45/65 Kč</p>
+            <p><strong>Toast/Panini s bazalkovým pestem, bylinkovým tofu, sušeným rajčátkem a sezamem</strong> .. 45/65 Kč</p>
+            <p><strong>Toast s marmeládou a arašídovým máslem</strong> .. 45 Kč</p>
+            <p><strong>Bezlepková bagetka</strong> s libovolnou náplní z výše uvedených .. 79 Kč</p>
+            <h2 id="pokrmy-z-horkovzdušné-fritézy">Pokrmy z horkovzdušné fritézy</h2>
+            <p><em>Díky přípravě bez smažení v oleji jsou jídla zdravá ía vhodná pro děti.</em></p>
+            <p><strong>Hranolky s kečupem</strong> … 39 Kč</p>
+            <p><strong>Krokety s kečupem</strong> … 49 Kč</p>
+            <p><strong>Opečené kostičky tofu s bylinkami navíc</strong> … 20 Kč</p>
+            <p><strong>Opečené kostičky marinovaného tempehu navíc</strong> … 30 Kč</p>
+            <h2 id="něco-na-zub-pro-děti">Něco na zub pro děti</h2>
+            <p><strong>Banán se šlehačkou/zmrzlinou</strong> sypaný kakaem … 39 Kč</p>
+            <p><strong>Zdobený chlebíček</strong> (rýžový/kukuřičný chlebíček s tvarohem a ovocem) … 39 Kč</p>
+            <p><strong>Krupicová kaše</strong> s bio máslem, kakaem a ovocem … 39 Kč</p>
+            <p><strong>Ovocná miska se šlehačkou</strong> … 39,-</p>
+            <p><strong>Mistička kojenecké kaše</strong> dle aktuální nabídky … 29 Kč</p>
+            <h1 id="nápojový-lístek">Nápojový lístek</h1>
+            <p><strong>Kohoutková voda s citronem</strong> … 15 Kč</p>
+            <h2 id="káva">Káva</h2>
+            <p><em>K espressu vám přidáme ohřáté bio kravské nebo sojové mléko, a sklenici vody. U Caffè Latté a Kapucína si řekněte, zda chcete přípravu z bio kravského nebo ze sojového mléka.</em></p>
+            <p><strong>Espresso/Lungo</strong>(větší espresso) … 35,-</p>
+            <p><strong>Doppio Espresso</strong> (z dvojnásobného množství kávy pro náročný den) … 55 Kč</p>
+            <p><strong>Capuccino</strong> neboli Kapucín … 49 Kč</p>
+            <p><strong>Caffè Latté</strong> … 55 Kč</p>
+            <p><strong>Ledová káva</strong> se zmrzlinou a šlehačkou … 59 Kč</p>
+            <h2 id="čaj">Čaj</h2>
+            <p><strong>Italské sáčkové čaje Coccole</strong> dle aktuální nabídky … 45,- Kč</p>
+            <p><strong>Černý/zelený sypaný čaj</strong> v konvičce dle aktuální nabídky 39,- Kč</p>
+            <p><strong>Chai Latté</strong> je řada čajů v Indickém stylu, výrazně kořeněné čaje se dolévají mlékem (bio kravské/sojové). Na výběr jsou Klasik/Vanilka/Koření/Anýz/Bez cukru … 49 Kč</p>
+            <p><strong>Meduňkový z naší zahrádky</strong> pro příjemné sny Vás nebo Vaší drobotiny … 39 Kč</p>
+            <p><strong>Horký zázvor s citronem a medem</strong> … 49 Kč</p>
+            <h2 id="horká-čokoláda-kakao-a-caro">Horká čokoláda, kakao a Caro</h2>
+            <p><strong>Horká čokoláda na tyčce</strong> Větší děti si za odměnu rády samy rozpustí čokoládu v horkém bio mléce. Hořká/Mléčná … 65 Kč</p>
+            <p><strong>Horká čokoláda</strong> … 45 Kč</p>
+            <p><strong>Kakao</strong> … 29 Kč</p>
+            <p><strong>Caro</strong> … 25 Kč</p>
+            <h2 id="domácí-limonády">Domácí limonády</h2>
+            <p>Znamenité domácí limonády plné zralého ovoce české značky My Homemade Lemonade vám připravíme studené i horké.</p>
+            <p><strong>Malina s bazalkou/Citron/Pomeranč s hřebíčkem/Višeň</strong> … 0.2l/19,- 0.4l/35,-</p>
+            <h1 id="freshe-smoothie-a-koktejly">Freshe, smoothie a koktejly</h1>
+            <p><em>Mixujeme zcela čerstvé ovocné a zeleninové smoothie a mléčné koktejly.</em></p>
+            <p><strong>Pomerančový fresh</strong> … 49 Kč Svěží nápoj z čerstvého pomeranče s trochou banánu.</p>
+            <p><strong>Grapefruitový fresh</strong> … 49 Kč Zdravý nápoj z čerstvého grapefruitu s trochou banánu.</p>
+            <p><strong>Ananasový fresh</strong> … 59 Kč Svěží nápoj z čerstvého ananasu s trochou banánu - bohužel se jedná o sezónní ovoce, které není vždy k dispozici.</p>
+            <p><strong>Banánový koktejl</strong> … 49 Kč Koktejl z banánu a bio mléka.</p>
+            <h2 id="alkoholické-nápoje">Alkoholické nápoje</h2>
+            <p><strong>Víno / Vinný střik</strong> … 0,1 l / 20 Kč</p>
+            <p><strong>Destiláty</strong> podle aktuální nabídky</p>
         </div>
         <footer class="footer">
             <p>Mail:
@@ -266,7 +143,7 @@
             <p>
                 <a href="https://klubik.eu/">WWW: klubik.eu</a>
             </p>
-            <p>Tel: 732 976 124</p>
+            <p>Tel: 733 244 421</p>
             <p>Komenského 1894, 258 01 Vlašim</a></p>
             <p>
                 <a href="https://www.firmy.cz/detail/13279691"><img src="themes/default/images/firmycz.png"/></a>
