--- a/www/kontakt.html
+++ b/www/kontakt.html
@@ -82,17 +82,25 @@
     <div class="content">
         <div class="section">
             <p>
-                <strong>Klubík Vlašim</strong> - dětská hernička s kavárnou
+                <strong>Otevírací doba</strong><br/>
                 <br/>
-                Komenského 1894<br/>
-                258 01 Vlašim<br/>
+                <strong>Pondělí </strong>9:00 - 12:00, 13:00 - 18:00<br/>
+                <strong>Úterý </strong>15:30 - 19:00<br/>
+                <strong>Středa </strong>9:00 - 12:00, 13:00 - 18:00<br/>
+                <strong>Čtvrtek </strong>ZAVŘENO<br/>
+                <strong>Pátek </strong>15:30 - 19:00<br/>
+                <strong>Sobota </strong>ZAVŘENO<br/>
+                <strong>Neděle </strong>15:00 - 19:00<br/>
                 <br/>
-                Tel: 732 976 124<br/>
-                email: klubik@klubik.eu<br/>
+                <em>Pozor, otevírací doba se může měnit podle dovolených, nemocí atp.</em>
+                Aktuální otevírací dobu najdete <a href="https://www.facebook.com/klubikvlasim/">na našem Facebooku.</a><br/>
 
-                <a href="https://mapy.cz/s/culumohebo"><img src="themes/default/images/mapycz.png"/></a>
-                <a href="https://www.firmy.cz/detail/13279691"><img src="themes/default/images/firmycz.png"/></a>
-                <a href="https://www.facebook.com/klubikvlasim/"><img src="themes/default/images/fb.png"/></a>
+
+                <img src="themes/default/images/vchod-drmax.jpg"/>
+                Vchod od Dr. Maxe
+
+                <img src="themes/default/images/vchod-dvur.jpg"/>
+                Vchod dvorem
             </p>
         </div>
         <footer class="footer">
@@ -102,8 +110,9 @@
             <p>
                 <a href="https://klubik.eu/">WWW: klubik.eu</a>
             </p>
-            <p>Tel: 732 976 124</p>
+            <p>Tel: 733 244 421</p>
             <p>Komenského 1894, 258 01 Vlašim</a></p>
+
             <p>
                 <a href="https://www.firmy.cz/detail/13279691"><img src="themes/default/images/firmycz.png"/></a>
                 <a href="https://mapy.cz/s/culumohebo"><img src="themes/default/images/mapycz.png"/></a>
