--- a/www/kontakt.html
+++ b/www/kontakt.html
@@ -81,6 +81,7 @@
 <div class="wrapper">
     <div class="content">
         <div class="section">
+            <h1>Litujeme, Klubík je v důsledku vládních opatření proti koronavirové pandemii od 14.10 zavřený. Doufáme, že se šíření podaří dostat pod kontrolu, a budeme si zase moci hrát.</h1>
             <p>
                 <strong>Otevírací doba</strong><br/>
                 <br/>
