Klubik je zavren

--- a/www/index.html
+++ b/www/index.html
@@ -79,7 +79,8 @@
 <div class="wrapper">
     <div class="content">
         <div class="section">
-            <h1>Litujeme, Klubík je v důsledku vládních opatření proti koronavirové pandemii od 14.10 zavřený. Doufáme, že se šíření podaří dostat pod kontrolu, a budeme si zase moci hrát.</h1>
+				<h1>Provoz Klubíku je ukončen :-(</h1>
+				<h1>Děkujeme všem za přízeň</h1>
             <p>Vlašimský klubík je hernička pro děti a kavárna v jednom. Na více než 100m<sup>2</sup> v centru Vlašimi najdete spoustu
                 hraček pro děti, domeček, skluzavku, boxovací pytle a další. Pro nejmenší děti máme připravený
                 miminkovský koutek s hrazdičkou. Maminky si mezitím mohou dát třeba dobrou kávu, čerstvé smoothie nebo
